# modules/auth/department-service/department-service-api/src/main/java/com/swork/auth/department/service/model/DepartmentEntrySoap.java
@@ -1,0 +1,206 @@
+/**
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
+ *
+ * This library is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either version 2.1 of the License, or (at your option)
+ * any later version.
+ *
+ * This library is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ * details.
+ */
+
+package com.swork.auth.department.service.model;
+
+import java.io.Serializable;
+
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+
+/**
+ * This class is used by SOAP remote services.
+ *
+ * @author Brian Wing Shun Chan
+ * @deprecated As of Athanasius (7.3.x), with no direct replacement
+ * @generated
+ */
+@Deprecated
+public class DepartmentEntrySoap implements Serializable {
+
+	public static DepartmentEntrySoap toSoapModel(DepartmentEntry model) {
+		DepartmentEntrySoap soapModel = new DepartmentEntrySoap();
+
+		soapModel.setUuid(model.getUuid());
+		soapModel.setExternalReferenceCode(model.getExternalReferenceCode());
+		soapModel.setDepartmentId(model.getDepartmentId());
+		soapModel.setGroupId(model.getGroupId());
+		soapModel.setCompanyId(model.getCompanyId());
+		soapModel.setAccountId(model.getAccountId());
+		soapModel.setCreateDate(model.getCreateDate());
+		soapModel.setModifiedId(model.getModifiedId());
+		soapModel.setModifiedDate(model.getModifiedDate());
+		soapModel.setBusinessId(model.getBusinessId());
+		soapModel.setName(model.getName());
+
+		return soapModel;
+	}
+
+	public static DepartmentEntrySoap[] toSoapModels(DepartmentEntry[] models) {
+		DepartmentEntrySoap[] soapModels =
+			new DepartmentEntrySoap[models.length];
+
+		for (int i = 0; i < models.length; i++) {
+			soapModels[i] = toSoapModel(models[i]);
+		}
+
+		return soapModels;
+	}
+
+	public static DepartmentEntrySoap[][] toSoapModels(
+		DepartmentEntry[][] models) {
+
+		DepartmentEntrySoap[][] soapModels = null;
+
+		if (models.length > 0) {
+			soapModels =
+				new DepartmentEntrySoap[models.length][models[0].length];
+		}
+		else {
+			soapModels = new DepartmentEntrySoap[0][0];
+		}
+
+		for (int i = 0; i < models.length; i++) {
+			soapModels[i] = toSoapModels(models[i]);
+		}
+
+		return soapModels;
+	}
+
+	public static DepartmentEntrySoap[] toSoapModels(
+		List<DepartmentEntry> models) {
+
+		List<DepartmentEntrySoap> soapModels =
+			new ArrayList<DepartmentEntrySoap>(models.size());
+
+		for (DepartmentEntry model : models) {
+			soapModels.add(toSoapModel(model));
+		}
+
+		return soapModels.toArray(new DepartmentEntrySoap[soapModels.size()]);
+	}
+
+	public DepartmentEntrySoap() {
+	}
+
+	public long getPrimaryKey() {
+		return _departmentId;
+	}
+
+	public void setPrimaryKey(long pk) {
+		setDepartmentId(pk);
+	}
+
+	public String getUuid() {
+		return _uuid;
+	}
+
+	public void setUuid(String uuid) {
+		_uuid = uuid;
+	}
+
+	public String getExternalReferenceCode() {
+		return _externalReferenceCode;
+	}
+
+	public void setExternalReferenceCode(String externalReferenceCode) {
+		_externalReferenceCode = externalReferenceCode;
+	}
+
+	public long getDepartmentId() {
+		return _departmentId;
+	}
+
+	public void setDepartmentId(long departmentId) {
+		_departmentId = departmentId;
+	}
+
+	public long getGroupId() {
+		return _groupId;
+	}
+
+	public void setGroupId(long groupId) {
+		_groupId = groupId;
+	}
+
+	public long getCompanyId() {
+		return _companyId;
+	}
+
+	public void setCompanyId(long companyId) {
+		_companyId = companyId;
+	}
+
+	public long getAccountId() {
+		return _accountId;
+	}
+
+	public void setAccountId(long accountId) {
+		_accountId = accountId;
+	}
+
+	public Date getCreateDate() {
+		return _createDate;
+	}
+
+	public void setCreateDate(Date createDate) {
+		_createDate = createDate;
+	}
+
+	public long getModifiedId() {
+		return _modifiedId;
+	}
+
+	public void setModifiedId(long modifiedId) {
+		_modifiedId = modifiedId;
+	}
+
+	public Date getModifiedDate() {
+		return _modifiedDate;
+	}
+
+	public void setModifiedDate(Date modifiedDate) {
+		_modifiedDate = modifiedDate;
+	}
+
+	public long getBusinessId() {
+		return _businessId;
+	}
+
+	public void setBusinessId(long businessId) {
+		_businessId = businessId;
+	}
+
+	public String getName() {
+		return _name;
+	}
+
+	public void setName(String name) {
+		_name = name;
+	}
+
+	private String _uuid;
+	private String _externalReferenceCode;
+	private long _departmentId;
+	private long _groupId;
+	private long _companyId;
+	private long _accountId;
+	private Date _createDate;
+	private long _modifiedId;
+	private Date _modifiedDate;
+	private long _businessId;
+	private String _name;
+
+}
